# keycloak-extensions

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  Tiltfile  develop.docker-compose.yaml  docker-compose.yaml  license_header.txt  test.docker-compose.yaml  tilt_config.json.example  update-appcenter-test.sh
ansible/: playbook.yml  provision_ucs_environment.yml  requirements.yml
appcenter/: compose  configure_host  ini  inst  meta  preinst.tmpl  settings  uinst
docs/: abbreviations.txt  architecture.rst  changelog.rst  conf.py  configuration.rst  index.rst  installation.rst  limitations.rst  links.txt  spelling_wordlist  troubleshooting.rst
handler/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __main__.py  actions.py  conditions.py  database.py  main.py  requirements.txt  utils.py
helm/: .gitignore  .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.yaml
keycloak-bfa-helm/: Chart.yaml  README.md  push_images.sh  run_local.sh  values.yaml
tests/e2e/: Dockerfile  README.md  pyproject.toml  requirements_test.txt
tests/e2e/src/api/: keycloak_api.py
tests/e2e/src/pages/: admin_console_page.py  admin_login_page.py  base.py  on_block_page.py  welcome_page.py
tests/e2e/src/pages/keycloak_admin/: admin_login_page.py  on_block_page.py  welcome_page.py
tests/e2e/src/pages/keycloak_admin/admin_console/: __init__.py  admin_console_home_page.py
tests/e2e/src/pages/keycloak_admin/admin_console/common/: admin_console_page.py  header.py
tests/e2e/tests/: conftest.py  test_block.py  test_example.py
(+133 files in other folders)
