[project]
name = "pages"
version = "0.1.0"
description = "Page Objects for Brute Force Prevention"
maintainers = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
requires-python = ">=3.8,<4"
dependencies = [ "playwright==1.30.0" ]

[project.optional-dependencies]
tests = [ "pytest-playwright==0.3.0" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pages"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
testpaths = [ "tests" ]
